final contrast fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -74,5 +74,5 @@ footer {
 }
 
 #lastModified {
-  color: yellow;
+  color: black;
 }
